--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -85,7 +85,7 @@ sidebar_toc:
 # Show a link to edit each page on GitHub
 github_edit:
   enabled: true
-  base_url: https://github.com/MaiorumSeries/maiorumseries.github.io/edit/gh-pages/
+  base_url: https://github.com/MaiorumSeries/maiorumseries.github.io/edit/main/
 
 # Custom CSS
 extra_css:
