Remove Site Folder

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 .vs/maiorumseries.github.io/FileContentIndex/cce0382a-ac38-4421-b8f2-ebab22253dd4.vsidx
 .vs/maiorumseries.github.io/FileContentIndex/read.lock
 .vs/maiorumseries.github.io/v17/.wsuo
+docs/_site/
